# Nat-Type-Tester

./: .gitignore  CMakeLists.txt  main.cpp
source/: component.cpp  component.h  gsocket.cpp  gsocket.h  interface.cpp  interface.h  layout.cpp  layout.h  type_test.cpp  type_test.h
source/constants/: msgstruct.h
source/message/: encodeutil.cpp  encodeutil.h  endecode.cpp  endecode.h  msgstruct.h  stunmsg.cpp  stunmsg.h
source/socket/: client.cpp  client.h  socket.cpp  socket.h
source/window/: component.cpp  component.h  layout.cpp  layout.h
